/*
 * Copyright (c) 2022, Alibaba Group;
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package ioc_golang.aop.trace;

import "extension/aop/trace/api/jaeger/jaeger_model.proto";

option go_package = "ioc_golang/aop/trace";

service TraceService {
  rpc Trace (TraceRequest) returns (stream TraceResponse) {}
}

message TraceRequest{
  string sdid = 1;
  string method = 2;
  repeated Matcher matchers = 3;
  string pushToCollectorAddress = 4;
  int64 maxDepth = 5;
  int64 maxLength = 6;
}

message Matcher{
  int64 index = 1;
  string matchPath = 2;
  string matchValue = 3;
}

message TraceResponse{
  string collectorAddress = 1;
  bytes thriftSerializedSpans = 2;
  repeated jaeger.api_v2.Trace traces = 3;
}
